Build a jlink image for the Java client.